--- a/S1G7Projekt/S1G7Projekt/MainPage.xaml
+++ b/S1G7Projekt/S1G7Projekt/MainPage.xaml
@@ -16,6 +16,11 @@
                 <ImageBrush Stretch="UniformToFill" ImageSource="Assets/UIDone.png"/>
             </Grid.Background>
             <Image x:Name="image" HorizontalAlignment="Left" Height="720" VerticalAlignment="Top" Width="1280" Source="Billeder/UIDone.png"/>
+            <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="19,159,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
+            <Button x:Name="button1" Content="Button" HorizontalAlignment="Left" Margin="19,216,0,0" VerticalAlignment="Top" Height="46" Width="187"/>
+            <Button x:Name="button2" Content="Button" HorizontalAlignment="Left" Margin="19,272,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
+            <Button x:Name="button3" Content="Button" HorizontalAlignment="Left" Margin="19,598,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
+            <Button x:Name="button4" Content="Button" HorizontalAlignment="Left" Margin="19,654,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
         </Grid>
 
 
