--- a/S1G7Projekt/S1G7Projekt/MainPage.xaml
+++ b/S1G7Projekt/S1G7Projekt/MainPage.xaml
@@ -16,11 +16,22 @@
                 <ImageBrush Stretch="UniformToFill" ImageSource="Assets/UIDone.png"/>
             </Grid.Background>
             <Image x:Name="Baggrund" HorizontalAlignment="Left" Height="720" VerticalAlignment="Top" Width="1280" Source="Billeder/UI_Done.png"/>
-            <Button x:Name="MenuUgePlan" Content="Button" HorizontalAlignment="Left" Margin="19,159,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
-            <Button x:Name="MenuTilmeldspisning" Content="Button" HorizontalAlignment="Left" Margin="19,216,0,0" VerticalAlignment="Top" Height="46" Width="187"/>
-            <Button x:Name="MenuBetaling" Content="Button" HorizontalAlignment="Left" Margin="19,272,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
-            <Button x:Name="MenuNaesteUgePlan" Content="Button" HorizontalAlignment="Left" Margin="19,598,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
-            <Button x:Name="MenuOpretBruger" Content="Button" HorizontalAlignment="Left" Margin="19,654,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
+            <Button x:Name="MenuUgePlan" Content="" HorizontalAlignment="Left" Margin="19,159,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
+            <Button x:Name="MenuTilmeldspisning" Content="" HorizontalAlignment="Left" Margin="19,216,0,0" VerticalAlignment="Top" Height="46" Width="187"/>
+            <Button x:Name="MenuBetaling" Content="" HorizontalAlignment="Left" Margin="19,272,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
+            <Button x:Name="MenuNaesteUgePlan" Content="" HorizontalAlignment="Left" Margin="19,598,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
+            <Button x:Name="MenuOpretBruger" Content="" HorizontalAlignment="Left" Margin="19,654,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
+            <TextBlock x:Name="UgeTekst" HorizontalAlignment="Left" Margin="1071,83,0,0" TextWrapping="Wrap" Text="Uge:" VerticalAlignment="Top" Foreground="White" FontSize="35"/>
+            <TextBlock x:Name="UgeNr" HorizontalAlignment="Left" Margin="1147,83,0,0" TextWrapping="Wrap" Text="UgeNr" VerticalAlignment="Top" FontSize="35"/>
+            <TextBlock x:Name="SideNavnOverskrift" TextWrapping="Wrap" Text="Ugeplan" VerticalAlignment="Top" FontSize="50" Margin="545,35,545,0" Foreground="White"/>
+            <TextBlock x:Name="MandagTekst" HorizontalAlignment="Left" Margin="300,170,0,0" TextWrapping="Wrap" Text="Mandag" VerticalAlignment="Top" FontSize="20"/>
+            <TextBlock x:Name="TirsdagTekst" HorizontalAlignment="Left" Margin="525,170,0,0" TextWrapping="Wrap" Text="Tirsdag" VerticalAlignment="Top" FontSize="20"/>
+            <TextBlock x:Name="OnsdagTekst" HorizontalAlignment="Left" Margin="750,170,0,0" TextWrapping="Wrap" Text="Onsdag" VerticalAlignment="Top" FontSize="20"/>
+            <TextBlock x:Name="TorsdagTekst" HorizontalAlignment="Left" Margin="975,170,0,0" TextWrapping="Wrap" Text="Torsdag" VerticalAlignment="Top" FontSize="20"/>
+            <ListView x:Name="MandagList" HorizontalAlignment="Left" Height="500" Margin="300,200,0,0" VerticalAlignment="Top" Width="215"/>
+            <ListView x:Name="TirsdagList" HorizontalAlignment="Left" Height="500" Margin="525,200,0,0" VerticalAlignment="Top" Width="215"/>
+            <ListView x:Name="OnsdagList" HorizontalAlignment="Left" Height="500" Margin="750,200,0,0" VerticalAlignment="Top" Width="215"/>
+            <ListView x:Name="TordsagList" HorizontalAlignment="Left" Height="500" Margin="975,200,0,0" VerticalAlignment="Top" Width="215"/>
         </Grid>
 
 
