--- a/S1G7Projekt/S1G7Projekt/BetalingPage.xaml
+++ b/S1G7Projekt/S1G7Projekt/BetalingPage.xaml
@@ -15,6 +15,8 @@
             <Button x:Name="button2" Content="Button" HorizontalAlignment="Left" Margin="19,272,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
             <Button x:Name="button3" Content="Button" HorizontalAlignment="Left" Margin="19,598,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
             <Button x:Name="button4" Content="Button" HorizontalAlignment="Left" Margin="19,654,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
+            <ComboBox x:Name="HusSelect" Margin="320,168,0,0" Width="150"/>
+            <Button x:Name="button5" Content="Button" HorizontalAlignment="Right" Margin="0,0,210,82" VerticalAlignment="Bottom" Width="105"/>
         </Grid>
 
     </Grid>
