--- a/S1G7Projekt/S1G7Projekt/TilmeldSpisningPage.xaml
+++ b/S1G7Projekt/S1G7Projekt/TilmeldSpisningPage.xaml
@@ -15,6 +15,9 @@
             <Button x:Name="MenuBetaling" Content="Button" HorizontalAlignment="Left" Margin="19,272,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
             <Button x:Name="MenuNaesteUgePlan" Content="Button" HorizontalAlignment="Left" Margin="19,598,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
             <Button x:Name="MenuOpretBruger" Content="Button" HorizontalAlignment="Left" Margin="19,654,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
+            <TextBlock x:Name="UgeTekst" HorizontalAlignment="Left" Margin="1071,83,0,0" TextWrapping="Wrap" Text="Uge:" VerticalAlignment="Top" Foreground="White" FontSize="35"/>
+            <TextBlock x:Name="UgeNr" HorizontalAlignment="Left" Margin="1147,83,0,0" TextWrapping="Wrap" Text="UgeNr" VerticalAlignment="Top" FontSize="35"/>
+            <TextBlock x:Name="SideNavnOverskrift" TextWrapping="Wrap" Text="Ugeplan" VerticalAlignment="Top" FontSize="50" Margin="545,35,545,0" Foreground="White"/>
         </Grid>
         <ComboBox x:Name="HusSelect" Margin="320,168,0,0" Width="150"/>
         <ComboBox x:Name="DagSelect" Margin="320,205,0,0" Width="150"/>
