--- a/S1G7Projekt/S1G7Projekt/BetalingPage.xaml
+++ b/S1G7Projekt/S1G7Projekt/BetalingPage.xaml
@@ -17,7 +17,7 @@
             <Button x:Name="MenuOpretBruger" Content="Button" HorizontalAlignment="Left" Margin="19,654,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
             <TextBlock x:Name="UgeTekst" HorizontalAlignment="Left" Margin="1071,83,0,0" TextWrapping="Wrap" Text="Uge:" VerticalAlignment="Top" Foreground="White" FontSize="35"/>
             <TextBlock x:Name="UgeNr" HorizontalAlignment="Left" Margin="1147,83,0,0" TextWrapping="Wrap" Text="UgeNr" VerticalAlignment="Top" FontSize="35"/>
-            <TextBlock x:Name="SideNavnOverskrift" TextWrapping="Wrap" Text="Ugeplan" VerticalAlignment="Top" FontSize="50" Margin="545,35,545,0" Foreground="White"/>
+            <TextBlock x:Name="SideNavnOverskrift" TextWrapping="Wrap" Text="Betaling" VerticalAlignment="Top" FontSize="50" Margin="550,35,550,0" Foreground="White"/>
         </Grid>
 
     </Grid>
