--- a/S1G7Projekt/S1G7Projekt/TilmeldSpisningPage.xaml
+++ b/S1G7Projekt/S1G7Projekt/TilmeldSpisningPage.xaml
@@ -19,8 +19,7 @@
             <TextBlock x:Name="UgeNr" HorizontalAlignment="Left" Margin="1147,83,0,0" TextWrapping="Wrap" Text="UgeNr" VerticalAlignment="Top" FontSize="35"/>
             <TextBlock x:Name="SideNavnOverskrift" TextWrapping="Wrap" Text="Tilmeld Spisning" VerticalAlignment="Top" FontSize="50" Margin="455,35,455,0" Foreground="White"/>
             <ComboBox x:Name="HusSelect" Margin="320,246,0,0" Width="150"/>
-            
-            <ComboBox x:Name="DagSelect" Margin="320,173,0,0" Width="150"/>
+            <ComboBox x:Name="DagSelect" Margin="320,173,0,0" Width="150"/> 
             
             <TextBox x:Name="Voksen" HorizontalAlignment="Left" Margin="320,334,0,354" TextWrapping="Wrap" Text="TextBox" Width="150" d:LayoutOverrides="Height, TopPosition, BottomPosition"/>
             
@@ -55,6 +54,7 @@
             <TextBlock x:Name="valg_dag" HorizontalAlignment="Left" Margin="320,141,0,0" TextWrapping="Wrap" Text="Vælg dag:" VerticalAlignment="Top" FontSize="20"/>
             
             <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="320,214,0,0" TextWrapping="Wrap" Text="Vælg Husnr:" VerticalAlignment="Top" FontSize="20"/>
+            <CheckBox x:Name="checkBox" Content="Lås Dag" Margin="500,173,0,0" VerticalAlignment="Top"/>
         </Grid>
 
     </Grid>
