Lavet meget basic xaml på betalingsiden

--- a/S1G7Projekt/S1G7Projekt/BetalingPage.xaml
+++ b/S1G7Projekt/S1G7Projekt/BetalingPage.xaml
@@ -18,6 +18,53 @@
             <TextBlock x:Name="UgeTekst" HorizontalAlignment="Left" Margin="1071,83,0,0" TextWrapping="Wrap" Text="Uge:" VerticalAlignment="Top" Foreground="White" FontSize="35"/>
             <TextBlock x:Name="UgeNr" HorizontalAlignment="Left" Margin="1147,83,0,0" TextWrapping="Wrap" Text="UgeNr" VerticalAlignment="Top" FontSize="35"/>
             <TextBlock x:Name="SideNavnOverskrift" TextWrapping="Wrap" Text="Betaling" VerticalAlignment="Top" FontSize="50" Margin="550,35,550,0" Foreground="White"/>
+            <ComboBox x:Name="comboBox" Margin="325,159,0,0" Width="160" FontSize="20"/>
+            <TextBlock x:Name="Man" HorizontalAlignment="Left" Margin="325,260,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20">
+                <Run Text="Mandag"/>
+                <Run Text=":"/>
+            </TextBlock>
+            <TextBlock x:Name="Tir" HorizontalAlignment="Left" Margin="326,320,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20">
+                <Run Text="Tirsdag"/>
+                <Run Text=":"/>
+            </TextBlock>
+            <TextBlock x:Name="Ons" HorizontalAlignment="Left" Margin="325,0,0,313" TextWrapping="Wrap" VerticalAlignment="Bottom" FontSize="20">
+                <Run Text="Onsdag"/>
+                <Run Text=":"/>
+            </TextBlock>
+            <TextBlock x:Name="Tor" HorizontalAlignment="Left" Margin="325,0,0,248" TextWrapping="Wrap" VerticalAlignment="Bottom" FontSize="20">
+                <Run Text="Torsdag"/>
+                <Run Text=":"/>
+            </TextBlock>
+            <TextBlock x:Name="Total" HorizontalAlignment="Left" Margin="325,0,0,193" TextWrapping="Wrap" VerticalAlignment="Bottom" FontSize="20" Height="27">
+                <Run Text="Total:"/>
+                <LineBreak/>
+                <Run/>
+            </TextBlock>
+            <TextBlock x:Name="penge1" HorizontalAlignment="Left" Margin="456,260,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="Penge" FontSize="20" RenderTransformOrigin="-0.034,0.556"/>
+            <TextBlock x:Name="penge2" HorizontalAlignment="Left" Margin="456,322,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Text="Penge" Height="28" FontSize="20">
+                <TextBlock.Foreground>
+                    <LinearGradientBrush EndPoint="2.392,3.273" StartPoint="0.972,0.927">
+                        <GradientStop Color="Black" Offset="0"/>
+                        <GradientStop Color="White" Offset="1"/>
+                    </LinearGradientBrush>
+                </TextBlock.Foreground>
+            </TextBlock>
+            <TextBlock x:Name="penge3" HorizontalAlignment="Left" Margin="456,0,0,313" TextWrapping="Wrap" VerticalAlignment="Bottom" Text="penge" FontSize="20" d:LayoutOverrides="VerticalAlignment"/>
+            <TextBlock x:Name="penge4" HorizontalAlignment="Left" Margin="456,0,0,248" TextWrapping="Wrap" VerticalAlignment="Bottom" FontSize="20" RenderTransformOrigin="0.5,0.515" Text="penge"/>
+            <TextBlock x:Name="total" HorizontalAlignment="Left" Margin="456,0,0,192" TextWrapping="Wrap" Text="Total" VerticalAlignment="Bottom" FontSize="20"/>
+            <TextBlock x:Name="Husnr" HorizontalAlignment="Left" Margin="326,132,0,0" TextWrapping="Wrap" Text="Vælg Husnr" VerticalAlignment="Top" FontSize="20"/>
+            <Rectangle Fill="#FFF4F4F5" Height="5" Margin="325,292,495,0" Stroke="Black" VerticalAlignment="Top"/>
+            <Rectangle Fill="#FFF4F4F5" Height="5" Margin="325,350,495,0" Stroke="Black" VerticalAlignment="Top"/>
+            <Rectangle Fill="#FFF4F4F5" Height="5" Margin="325,0,495,303" Stroke="Black" VerticalAlignment="Bottom"/>
+            <Rectangle Fill="#FFF4F4F5" Height="5" Margin="325,0,495,238" Stroke="Black" VerticalAlignment="Bottom"/>
+            <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Margin="575,260,0,193" Stroke="Black" Width="5"/>
+            <TextBlock x:Name="chef" Margin="582,216,588,0" TextWrapping="Wrap" Text="ChefKok:" VerticalAlignment="Top" FontSize="20"/>
+            <TextBlock x:Name="kunde" HorizontalAlignment="Left" Margin="325,216,0,0" TextWrapping="Wrap" Text="Kunde:" VerticalAlignment="Top" FontSize="20"/>
+            <TextBox x:Name="chef_man" Margin="582,258,560,0" TextWrapping="Wrap" Text="Penge Brugt" VerticalAlignment="Top"/>
+            <TextBox x:Name="chef_tir" Margin="582,316,560,0" TextWrapping="Wrap" Text="Penge Brugt" VerticalAlignment="Top"/>
+            <TextBox x:Name="chef_ons" Margin="582,0,560,310" TextWrapping="Wrap" Text="Penge Brugt" VerticalAlignment="Bottom"/>
+            <TextBox x:Name="chef_tor" Margin="582,0,560,245" TextWrapping="Wrap" Text="Penge Brugt" VerticalAlignment="Bottom"/>
+            <Button x:Name="button" Content="Gem" HorizontalAlignment="Stretch" Margin="582,0,633,201" VerticalAlignment="Bottom" d:LayoutOverrides="Width"/>
         </Grid>
 
     </Grid>
