--- a/S1G7Projekt/S1G7Projekt/BetalingPage.xaml
+++ b/S1G7Projekt/S1G7Projekt/BetalingPage.xaml
@@ -1,24 +1,55 @@
 ﻿<Page
-    x:Class="S1G7Projekt.BetalingPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:S1G7Projekt"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
+    x:Class="S1G7Projekt.BetalingPage"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid HorizontalAlignment="Left" Height="720" VerticalAlignment="Top" Width="1280">
             <Image x:Name="Baggrund" HorizontalAlignment="Left" Height="720" VerticalAlignment="Top" Width="1280" Source="Billeder/UI_Done.png"/>
-            <Button x:Name="MenuUgePlan" Content="" HorizontalAlignment="Left" Margin="19,159,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
-            <Button x:Name="MenuTilmeldspisning" Content="" HorizontalAlignment="Left" Margin="19,216,0,0" VerticalAlignment="Top" Height="46" Width="187"/>
-            <Button x:Name="MenuBetaling" Content="" HorizontalAlignment="Left" Margin="19,272,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
-            <Button x:Name="MenuNaesteUgePlan" Content="" HorizontalAlignment="Left" Margin="19,598,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
-            <Button x:Name="MenuOpretBruger" Content="" HorizontalAlignment="Left" Margin="19,654,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
+            <Button x:Name="MenuUgePlan" Content="" HorizontalAlignment="Left" Margin="19,159,0,0" VerticalAlignment="Top" Height="47" Width="187">
+                <Interactivity:Interaction.Behaviors>
+                    <Core:EventTriggerBehavior EventName="Click">
+                        <Core:NavigateToPageAction TargetPage="VMUgePlan"/>
+                    </Core:EventTriggerBehavior>
+                </Interactivity:Interaction.Behaviors>
+            </Button>
+            <Button x:Name="MenuTilmeldspisning" Content="" HorizontalAlignment="Left" Margin="19,216,0,0" VerticalAlignment="Top" Height="46" Width="187">
+                <Interactivity:Interaction.Behaviors>
+                    <Core:EventTriggerBehavior EventName="Click">
+                        <Core:NavigateToPageAction TargetPage="VMTilmeldSpisning"/>
+                    </Core:EventTriggerBehavior>
+                </Interactivity:Interaction.Behaviors>
+            </Button>
+            <Button x:Name="MenuBetaling" Content="" HorizontalAlignment="Left" Margin="19,272,0,0" VerticalAlignment="Top" Height="47" Width="187">
+                <Interactivity:Interaction.Behaviors>
+                    <Core:EventTriggerBehavior EventName="Click">
+                        <Core:NavigateToPageAction TargetPage="VmBetaling"/>
+                    </Core:EventTriggerBehavior>
+                </Interactivity:Interaction.Behaviors>
+            </Button>
+            <Button x:Name="MenuNaesteUgePlan" Content="" HorizontalAlignment="Left" Margin="19,598,0,0" VerticalAlignment="Top" Height="47" Width="187">
+                <Interactivity:Interaction.Behaviors>
+                    <Core:EventTriggerBehavior EventName="Click">
+                        <Core:NavigateToPageAction TargetPage="VMNaesteUgePlan"/>
+                    </Core:EventTriggerBehavior>
+                </Interactivity:Interaction.Behaviors>
+            </Button>
+            <Button x:Name="MenuOpretBruger" Content="" HorizontalAlignment="Left" Margin="19,654,0,0" VerticalAlignment="Top" Height="47" Width="187">
+                <Interactivity:Interaction.Behaviors>
+                    <Core:EventTriggerBehavior EventName="Click">
+                        <Core:NavigateToPageAction TargetPage="VmOpretBruger"/>
+                    </Core:EventTriggerBehavior>
+                </Interactivity:Interaction.Behaviors>
+            </Button>
             <TextBlock x:Name="UgeTekst" HorizontalAlignment="Left" Margin="1071,83,0,0" TextWrapping="Wrap" Text="Uge:" VerticalAlignment="Top" Foreground="White" FontSize="35"/>
             <TextBlock x:Name="UgeNr" HorizontalAlignment="Left" Margin="1147,83,0,0" TextWrapping="Wrap" Text="UgeNr" VerticalAlignment="Top" FontSize="35"/>
             <TextBlock x:Name="SideNavnOverskrift" TextWrapping="Wrap" Text="Betaling" VerticalAlignment="Top" FontSize="50" Margin="550,35,550,0" Foreground="White"/>
-            <ComboBox x:Name="comboBox" Margin="325,159,0,0" Width="160" FontSize="20"/>
+            <ComboBox x:Name="comboBox" Margin="563,159,557,0" FontSize="20" HorizontalAlignment="Stretch" d:LayoutOverrides="LeftPosition, RightPosition"/>
             <TextBlock x:Name="Man" HorizontalAlignment="Left" Margin="325,260,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20">
                 <Run Text="Mandag"/>
                 <Run Text=":"/>
@@ -52,19 +83,14 @@
             <TextBlock x:Name="penge3" HorizontalAlignment="Left" Margin="456,0,0,313" TextWrapping="Wrap" VerticalAlignment="Bottom" Text="penge" FontSize="20" d:LayoutOverrides="VerticalAlignment"/>
             <TextBlock x:Name="penge4" HorizontalAlignment="Left" Margin="456,0,0,248" TextWrapping="Wrap" VerticalAlignment="Bottom" FontSize="20" RenderTransformOrigin="0.5,0.515" Text="penge"/>
             <TextBlock x:Name="total" HorizontalAlignment="Left" Margin="456,0,0,192" TextWrapping="Wrap" Text="Total" VerticalAlignment="Bottom" FontSize="20"/>
-            <TextBlock x:Name="Husnr" HorizontalAlignment="Left" Margin="326,132,0,0" TextWrapping="Wrap" Text="Vælg Husnr" VerticalAlignment="Top" FontSize="20"/>
-            <Rectangle Fill="#FFF4F4F5" Height="5" Margin="325,292,495,0" Stroke="Black" VerticalAlignment="Top"/>
-            <Rectangle Fill="#FFF4F4F5" Height="5" Margin="325,350,495,0" Stroke="Black" VerticalAlignment="Top"/>
-            <Rectangle Fill="#FFF4F4F5" Height="5" Margin="325,0,495,303" Stroke="Black" VerticalAlignment="Bottom"/>
-            <Rectangle Fill="#FFF4F4F5" Height="5" Margin="325,0,495,238" Stroke="Black" VerticalAlignment="Bottom"/>
-            <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Margin="575,260,0,193" Stroke="Black" Width="5"/>
-            <TextBlock x:Name="chef" Margin="582,216,588,0" TextWrapping="Wrap" Text="ChefKok:" VerticalAlignment="Top" FontSize="20"/>
-            <TextBlock x:Name="kunde" HorizontalAlignment="Left" Margin="325,216,0,0" TextWrapping="Wrap" Text="Kunde:" VerticalAlignment="Top" FontSize="20"/>
-            <TextBox x:Name="chef_man" Margin="582,258,560,0" TextWrapping="Wrap" Text="Penge Brugt" VerticalAlignment="Top"/>
-            <TextBox x:Name="chef_tir" Margin="582,316,560,0" TextWrapping="Wrap" Text="Penge Brugt" VerticalAlignment="Top"/>
-            <TextBox x:Name="chef_ons" Margin="582,0,560,310" TextWrapping="Wrap" Text="Penge Brugt" VerticalAlignment="Bottom"/>
-            <TextBox x:Name="chef_tor" Margin="582,0,560,245" TextWrapping="Wrap" Text="Penge Brugt" VerticalAlignment="Bottom"/>
-            <Button x:Name="button" Content="Gem" HorizontalAlignment="Stretch" Margin="582,0,633,201" VerticalAlignment="Bottom" d:LayoutOverrides="Width"/>
+            <TextBlock x:Name="Husnr" Margin="564,132,614,0" TextWrapping="Wrap" Text="Vælg Husnr" VerticalAlignment="Top" FontSize="20" d:LayoutOverrides="Width, LeftPosition, RightPosition"/>
+            <TextBlock x:Name="chef" Margin="0,210,198,0" TextWrapping="Wrap" Text="ChefKok:" VerticalAlignment="Top" FontSize="20" HorizontalAlignment="Right" Width="110"/>
+            <TextBlock x:Name="kunde" HorizontalAlignment="Left" Margin="325,210,0,0" TextWrapping="Wrap" Text="Kunde:" VerticalAlignment="Top" FontSize="20"/>
+            <TextBox x:Name="chef_man" Margin="0,258,170,0" TextWrapping="Wrap" Text="Penge Brugt" VerticalAlignment="Top" HorizontalAlignment="Right" Width="138"/>
+            <TextBox x:Name="chef_tir" Margin="0,316,170,0" TextWrapping="Wrap" Text="Penge Brugt" VerticalAlignment="Top" HorizontalAlignment="Right" Width="138"/>
+            <TextBox x:Name="chef_ons" Margin="0,0,170,310" TextWrapping="Wrap" Text="Penge Brugt" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="138"/>
+            <TextBox x:Name="chef_tor" Margin="0,0,170,245" TextWrapping="Wrap" Text="Penge Brugt" VerticalAlignment="Bottom" HorizontalAlignment="Right" Width="138"/>
+            <Button x:Name="button" Content="Gem" HorizontalAlignment="Right" Margin="0,0,255,201" VerticalAlignment="Bottom"/>
         </Grid>
 
     </Grid>
