--- a/S1G7Projekt/S1G7Projekt/OpretBrugerPage.xaml
+++ b/S1G7Projekt/S1G7Projekt/OpretBrugerPage.xaml
@@ -1,26 +1,60 @@
 ﻿<Page
-    x:Class="S1G7Projekt.OpretBrugerPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:S1G7Projekt"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
+    x:Class="S1G7Projekt.OpretBrugerPage"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid HorizontalAlignment="Left" Height="720" VerticalAlignment="Top" Width="1280">
             <Image x:Name="Baggrund" HorizontalAlignment="Left" Height="720" VerticalAlignment="Top" Width="1280" Source="Billeder/UI_Done.png"/>
-            <Button x:Name="MenuUgePlan" Content="" HorizontalAlignment="Left" Margin="19,159,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
-            <Button x:Name="MenuTilmeldspisning" Content="" HorizontalAlignment="Left" Margin="19,216,0,0" VerticalAlignment="Top" Height="46" Width="187"/>
-            <Button x:Name="MenuBetaling" Content="" HorizontalAlignment="Left" Margin="19,272,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
-            <Button x:Name="MenuNaesteUgePlan" Content="" HorizontalAlignment="Left" Margin="19,598,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
-            <Button x:Name="MenuOpretBruger" Content="" HorizontalAlignment="Left" Margin="19,654,0,0" VerticalAlignment="Top" Height="47" Width="187"/>
             <TextBlock x:Name="SideNavnOverskrift" TextWrapping="Wrap" Text="Opret Bruger" VerticalAlignment="Top" FontSize="50" Margin="495,35,495,0" Foreground="White"/>
             <ListView x:Name="BrugerList" HorizontalAlignment="Left" Height="530" Margin="300,170,0,0" VerticalAlignment="Top" Width="250" Background="#FF8F8F8F"/>
             <TextBox x:Name="BrugerNavn_HusNr" HorizontalAlignment="Left" Margin="575,170,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="210" FontSize="20" Height="40"/>
             <Button x:Name="Add" Content="Tilføj Bruger" HorizontalAlignment="Left" Margin="575,240,0,0" VerticalAlignment="Top" Background="#FF858585" Foreground="White" Width="100"/>
             <Button x:Name="Remove" Content="Fjern Bruger" HorizontalAlignment="Left" Margin="575,290,0,0" VerticalAlignment="Top" Background="#FF858585" Foreground="White" Width="100"/>
         </Grid>
+
+
+        <Button x:Name="MenuUgePlan" Content="" HorizontalAlignment="Left" Margin="19,159,0,0" VerticalAlignment="Top" Height="47" Width="187">
+            <Interactivity:Interaction.Behaviors>
+                <Core:EventTriggerBehavior EventName="Click">
+                    <Core:NavigateToPageAction TargetPage="VMUgePlan"/>
+                </Core:EventTriggerBehavior>
+            </Interactivity:Interaction.Behaviors>
+        </Button>
+        <Button x:Name="MenuTilmeldspisning" Content="" HorizontalAlignment="Left" Margin="19,216,0,0" VerticalAlignment="Top" Height="46" Width="187">
+            <Interactivity:Interaction.Behaviors>
+                <Core:EventTriggerBehavior EventName="Click">
+                    <Core:NavigateToPageAction TargetPage="VMTilmeldSpisning"/>
+                </Core:EventTriggerBehavior>
+            </Interactivity:Interaction.Behaviors>
+        </Button>
+        <Button x:Name="MenuBetaling" Content="" HorizontalAlignment="Left" Margin="19,272,0,0" VerticalAlignment="Top" Height="47" Width="187">
+            <Interactivity:Interaction.Behaviors>
+                <Core:EventTriggerBehavior EventName="Click">
+                    <Core:NavigateToPageAction TargetPage="VmBetaling"/>
+                </Core:EventTriggerBehavior>
+            </Interactivity:Interaction.Behaviors>
+        </Button>
+        <Button x:Name="MenuNaesteUgePlan" Content="" HorizontalAlignment="Left" Margin="19,598,0,0" VerticalAlignment="Top" Height="47" Width="187">
+            <Interactivity:Interaction.Behaviors>
+                <Core:EventTriggerBehavior EventName="Click">
+                    <Core:NavigateToPageAction TargetPage="VMNaesteUgePlan"/>
+                </Core:EventTriggerBehavior>
+            </Interactivity:Interaction.Behaviors>
+        </Button>
+        <Button x:Name="MenuOpretBruger" Content="" HorizontalAlignment="Left" Margin="19,654,0,0" VerticalAlignment="Top" Height="47" Width="187">
+            <Interactivity:Interaction.Behaviors>
+                <Core:EventTriggerBehavior EventName="Click">
+                    <Core:NavigateToPageAction TargetPage="VmOpretBruger"/>
+                </Core:EventTriggerBehavior>
+            </Interactivity:Interaction.Behaviors>
+        </Button>
+
 
     </Grid>
 </Page>
