--- a/S1G7Projekt/S1G7Projekt/TilmeldSpisningPage.xaml
+++ b/S1G7Projekt/S1G7Projekt/TilmeldSpisningPage.xaml
@@ -93,8 +93,7 @@
 
             <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="320,214,0,0" TextWrapping="Wrap" Text="Vælg Husnr:" VerticalAlignment="Top" FontSize="20"/>
             <CheckBox x:Name="Losdag" Content="Lås Dag" Margin="500,173,0,0" VerticalAlignment="Top"/>
-            <Button x:Name="button" Content="Button" VerticalAlignment="Top"/>
-            <Button x:Name="button1" Content="Gem" HorizontalAlignment="Left" Margin="320,0,0,90" VerticalAlignment="Bottom" Width="150"/>
+            <Button x:Name="Gem" Content="Gem" HorizontalAlignment="Left" Margin="320,0,0,90" VerticalAlignment="Bottom" Width="150"/>
         </Grid>
     </Grid>
 </Page>
