--- a/S1G7Projekt/S1G7Projekt/NaesteUgePlanPage.xaml
+++ b/S1G7Projekt/S1G7Projekt/NaesteUgePlanPage.xaml
@@ -40,18 +40,18 @@
                     </Core:EventTriggerBehavior>
                 </Interactivity:Interaction.Behaviors>
             </Button>
-            <ComboBox x:Name="DagDD" HorizontalAlignment="Left" Margin="1035,170,0,0" VerticalAlignment="Top" Width="120" FontSize="20" ItemsSource="{Binding DagList}"/>
-            <ComboBox x:Name="JobDD" HorizontalAlignment="Left" Margin="1125,230,0,0" VerticalAlignment="Top" Width="120" FontSize="20" ItemsSource="{Binding JobTypeList}"/>
-            <TextBox x:Name="RetTekstbox" HorizontalAlignment="Left" Margin="900,230,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" FontSize="20" Width="160" Height="90"/>
-            <TextBox x:Name="JobTekstBox" HorizontalAlignment="Left" Margin="1125,295,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Height="40" Width="120" FontSize="20"/>
+            <ComboBox x:Name="DagDD" HorizontalAlignment="Left" Margin="1035,170,0,0" VerticalAlignment="Top" Width="120" FontSize="20" ItemsSource="{Binding DagList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <ComboBox x:Name="JobDD" HorizontalAlignment="Left" Margin="1125,230,0,0" VerticalAlignment="Top" Width="120" FontSize="20" ItemsSource="{Binding JobTypeList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox x:Name="RetTekstbox" HorizontalAlignment="Left" Margin="900,230,0,0" TextWrapping="Wrap" Text="{Binding RetTekstBox, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" FontSize="20" Width="160" Height="90"/>
+            <TextBox x:Name="JobTekstBox" HorizontalAlignment="Left" Margin="1125,295,0,0" TextWrapping="Wrap" Text="{Binding Navn, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Height="40" Width="120" FontSize="20"/>
             <TextBlock x:Name="MandagTekstBlock" HorizontalAlignment="Left" Margin="250,170,0,0" TextWrapping="Wrap" Text="Mandag" VerticalAlignment="Top" FontSize="20"/>
             <TextBlock x:Name="TirsdagTekstBlock" HorizontalAlignment="Left" Margin="400,170,0,0" TextWrapping="Wrap" Text="Tirsdag" VerticalAlignment="Top" FontSize="20"/>
             <TextBlock x:Name="OnsdagTekstBlock" HorizontalAlignment="Left" Margin="550,170,0,0" TextWrapping="Wrap" Text="Onsdag" VerticalAlignment="Top" FontSize="20"/>
             <TextBlock x:Name="TorsdagTekstBlock" HorizontalAlignment="Left" Margin="700,170,0,0" TextWrapping="Wrap" Text="Torsdag" VerticalAlignment="Top" FontSize="20"/>
-            <TextBlock x:Name="RetMandagTekst" HorizontalAlignment="Left" Margin="250,200,0,0" TextWrapping="Wrap" Text="{Binding RetMandag}" VerticalAlignment="Top" FontSize="20"/>
-            <TextBlock x:Name="RetTirsdag" HorizontalAlignment="Left" Margin="400,200,0,0" TextWrapping="Wrap" Text="{Binding RetTirsdag}" VerticalAlignment="Top" FontSize="20"/>
-            <TextBlock x:Name="RetOnsdag" HorizontalAlignment="Left" Margin="550,200,0,0" TextWrapping="Wrap" Text="{Binding RetOnsdag}" VerticalAlignment="Top" FontSize="20"/>
-            <TextBlock x:Name="RetTorsdag" HorizontalAlignment="Left" Margin="700,200,0,0" TextWrapping="Wrap" Text="{Binding RetTorsdag}" VerticalAlignment="Top" FontSize="20"/>
+            <TextBlock x:Name="RetMandagTekst" HorizontalAlignment="Left" Margin="250,200,0,0" TextWrapping="Wrap" Text="{Binding RetMandag, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" FontSize="20"/>
+            <TextBlock x:Name="RetTirsdag" HorizontalAlignment="Left" Margin="400,200,0,0" TextWrapping="Wrap" Text="{Binding RetTirsdag, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" FontSize="20"/>
+            <TextBlock x:Name="RetOnsdag" HorizontalAlignment="Left" Margin="550,200,0,0" TextWrapping="Wrap" Text="{Binding RetOnsdag, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" FontSize="20"/>
+            <TextBlock x:Name="RetTorsdag" HorizontalAlignment="Left" Margin="700,200,0,0" TextWrapping="Wrap" Text="{Binding RetTorsdag, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" FontSize="20"/>
             <ListView x:Name="MandagList" HorizontalAlignment="Left" Height="450" Margin="250,230,0,0" VerticalAlignment="Top" Width="140" Background="#FF8F8F8F" ItemsSource="{Binding MandagList}"/>
             <ListView x:Name="TirsdagList" HorizontalAlignment="Left" Height="450" Margin="400,230,0,0" VerticalAlignment="Top" Width="140" Background="#FF8F8F8F" ItemsSource="{Binding TirsdagList}"/>
             <ListView x:Name="OnsdagList" HorizontalAlignment="Left" Height="450" Margin="550,230,0,0" VerticalAlignment="Top" Width="140" Background="#FF8F8F8F" ItemsSource="{Binding OnsdagList}"/>
