--- a/S1G7Projekt/S1G7Projekt/NaesteUgePlanPage.xaml
+++ b/S1G7Projekt/S1G7Projekt/NaesteUgePlanPage.xaml
@@ -22,21 +22,21 @@
             <Button x:Name="RetAddRedigere" Content="Tilføj/Redigere" HorizontalAlignment="Left" Margin="900,350,0,0" VerticalAlignment="Top" FontSize="20" Width="160">
                 <Interactivity:Interaction.Behaviors>
                     <Core:EventTriggerBehavior EventName="Click">
-                        <Core:CallMethodAction MethodName="{Binding RelayCommandTilfoejRedigereRet}"/>
+                        <Core:InvokeCommandAction Command="{Binding RelayCommandTilfoejRedigereRet}"/>
                     </Core:EventTriggerBehavior>
                 </Interactivity:Interaction.Behaviors>
             </Button>
             <Button x:Name="JobAdd" Content="Tilføj" HorizontalAlignment="Left" Margin="1125,360,0,0" VerticalAlignment="Top" Height="40" FontSize="20" Width="120">
                 <Interactivity:Interaction.Behaviors>
                     <Core:EventTriggerBehavior EventName="Click">
-                        <Core:CallMethodAction MethodName="{Binding RelayCommandTilfoejJob}"/>
+                        <Core:InvokeCommandAction Command="{Binding RelayCommandTilfoejJob}"/>
                     </Core:EventTriggerBehavior>
                 </Interactivity:Interaction.Behaviors>
             </Button>
             <Button x:Name="JobRemove" Content="Fjern" HorizontalAlignment="Left" Margin="1125,420,0,0" VerticalAlignment="Top" Height="40" Width="120" FontSize="20">
                 <Interactivity:Interaction.Behaviors>
                     <Core:EventTriggerBehavior EventName="Click">
-                        <Core:CallMethodAction MethodName="{Binding RelayCommandFjernJob}"/>
+                        <Core:InvokeCommandAction Command="{Binding RelayCommandFjernJob}"/>
                     </Core:EventTriggerBehavior>
                 </Interactivity:Interaction.Behaviors>
             </Button>
