--- a/S1G7Projekt/S1G7Projekt/TilmeldSpisningPage.xaml
+++ b/S1G7Projekt/S1G7Projekt/TilmeldSpisningPage.xaml
@@ -52,7 +52,11 @@
             <Run Text=":"/>
             </TextBlock>
 
-            <TextBlock x:Name="valg_dag" HorizontalAlignment="Left" Margin="320,141,0,0" TextWrapping="Wrap" Text="Vælg dag:" VerticalAlignment="Top" FontSize="20"/>
+            <TextBlock x:Name="valg_dag" HorizontalAlignment="Left" Margin="320,141,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20">
+                <Run Text="Vælg "/>
+                <Run Text="D"/>
+                <Run Text="ag:"/>
+            </TextBlock>
 
             <TextBlock x:Name="textBlock_Copy" HorizontalAlignment="Left" Margin="320,214,0,0" TextWrapping="Wrap" Text="Vælg Husnr:" VerticalAlignment="Top" FontSize="20"/>
             <CheckBox x:Name="Losdag" Content="Lås Dag" Margin="500,173,0,0" VerticalAlignment="Top"/>
